src/app/posts/post-view-detail/post-view-detail.component.scss
@import "wfx-toolkit";

:host {
  @include body-footer-layout;
}

.view {
  flex: 2;
  @include body-footer-layout;

  &__lastupdated,
  &__description {
    padding: 1em;
    color: color(grey, dark);
  }

  &__description {
    flex: 2;
  }

  &__backlink {
    @include bottombutton(color(black, light), color(black));
    width: 100%;
  }
}

